--- a/jas-testing-2/chat-app/templates/hubbase.html
+++ b/jas-testing-2/chat-app/templates/hubbase.html
@@ -60,7 +60,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Sketchpad</a>
+                    <a href="/sketchpad">Sketchpad</a>
                 </li>
 
 
@@ -69,7 +69,7 @@
         </nav>
         <div id="content">
 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
 
                     <button type="button" id="sidebarCollapse" class="btn btn-info">
@@ -81,8 +81,10 @@
 
                   
                 </div>
-            </nav>
+            </nav> -->
 
+            {% block content %}
+            {% endblock %}
         </div>
     </div>
 
