--- a/jas-testing-2/chat-app/templates/newsession.html
+++ b/jas-testing-2/chat-app/templates/newsession.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <div class = "background">
-    <form action="/chat_login" method = "post">
+    <form action="/joinsession" method = "post">
         <h3>Join an existing session</h3>
         <label>Enter session ID:</label>
         <input type="text" placeholder="Session ID" onfocus="this.placeholder = ''"onblur="this.placeholder = 1234" name="room" maxlength="10">
