--- a/chat-app backup/templates/hubbase.html
+++ b/chat-app backup/templates/hubbase.html
@@ -21,9 +21,12 @@
 <body>
     <div class="wrapper">
         <!-- Sidebar  -->
+        <header>
+            <button></button>
+            <h3>justask.</h3>
+        </header>
         <nav id="sidebar">
             <div class="sidebar-header">
-                <h3>justask.</h3>
             </div>
 
             <ul class="list-unstyled components">
