--- a/chat-app/templates/hubbase.html
+++ b/chat-app/templates/hubbase.html
@@ -68,7 +68,7 @@
             </ul>
         </nav>
         <div id="content">
-
+            <header></header>
             <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
 
