--- a/chat-app/templates/landingpage.html
+++ b/chat-app/templates/landingpage.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="../static/landingpage.css">
+  <link rel="stylesheet" href="../static/css/landingpage.css">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <title>justask</title>
 </head>
