--- a/chat-app/templates/hubbase.html
+++ b/chat-app/templates/hubbase.html
@@ -60,6 +60,9 @@
                 <li>
                     <a href="/sketchpad">Sketchpad</a>
                 </li>
+                <li>
+                    <a href="/MCQ">MCQ</a>
+                </li>
 
 
             
@@ -67,7 +70,7 @@
         </nav>
         <div id="content">
 
-            <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
 
                     <button type="button" id="sidebarCollapse" class="btn btn-info">
@@ -79,7 +82,7 @@
 
                   
                 </div>
-            </nav> -->
+            </nav>
 
             {% block content %}
             {% endblock %}
@@ -96,7 +99,7 @@
     </script>
 
 
-{% block body %}
+{% block body1 %}
 {% endblock %}
 </body>
 
