header and dropdown

--- a/chat-app/templates/hubbase.html
+++ b/chat-app/templates/hubbase.html
@@ -66,7 +66,16 @@
             </ul>
         </nav>
         <div id="content">
-
+            <header> 
+                <div class="dropdownbtn">
+                <button id="dropbtn"><i class='fas fa-user-circle' style='font-size:48px;color: white;'></i></button>
+                <div class="dropdownbtn-content">
+                    <a href="#">Profile</a>
+                    <a href="#">Settings</a>
+                    <a href="#">Sign Out</a>
+                </div>
+                </div>
+            </header>
             <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
 
