--- a/chat-app/templates/newsession.html
+++ b/chat-app/templates/newsession.html
@@ -8,8 +8,25 @@
 <div class = "background">
     <form action="/newsession" method = "post">
         <h3>Create a new session</h3>
+        <i class="fa-solid fa-coffee fa-5x"></i>
         <label>Enter a session ID (make it memorable!):</label>
-        <input type="text" placeholder="Session ID" onfocus="this.placeholder = ''"onblur="this.placeholder = 1234" name="room" maxlength="10">
+        <input type="text" placeholder="Session ID" onfocus="this.placeholder = ''"onblur="this.placeholder = 1234" name="room" maxlength="10" id="sessionID">
+        <script>
+
+
+            function GenerateSessionID() {
+                SESSION_ID_STRING_LENGTH = 10;
+                let result = '';
+                var selection = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+                var selectionSize = selection.length;
+                for ( var i = 0; i < SESSION_ID_STRING_LENGTH; i++ ) {
+                result += selection.charAt(Math.floor(Math.random() * selectionSize));
+            }
+            $('#sessionID').val(result);
+            }
+        </script>
+        <strong><a id="generateID" onclick = "GenerateSessionID()" style="cursor:pointer; font-size:15px;">Generate one for me</a></strong>
+        
         <button type="submit">Submit</button>
     </form>
 </div>
