--- a/chat-app/static/css/hubbase.css
+++ b/chat-app/static/css/hubbase.css
@@ -56,11 +56,10 @@ a:focus {
     align-items: stretch;
 }
 
-
 #sidebar {
     min-width: 250px;
     max-width: 250px;
-    background: rgb(129,96,217);;
+    background: #7386D5;
     color: #fff;
     transition: all 0.3s;
 }
@@ -71,7 +70,7 @@ a:focus {
 
 #sidebar .sidebar-header {
     padding: 20px;
-    background: rgb(129,96,217);;
+    background: #6d7fcc;
 }
 
 #sidebar ul.components {
@@ -98,7 +97,7 @@ a:focus {
 #sidebar ul li.active>a,
 a[aria-expanded="true"] {
     color: #fff;
-    background: rgb(129,96,217);
+    background: #6d7fcc;
 }
 
 a[data-toggle="collapse"] {
@@ -116,7 +115,7 @@ a[data-toggle="collapse"] {
 ul ul a {
     font-size: 0.9em !important;
     padding-left: 30px !important;
-    background: rgb(129,96,217);;
+    background: #6d7fcc;
 }
 
 ul.CTAs {
@@ -138,7 +137,7 @@ a.download {
 
 a.article,
 a.article:hover {
-    background: rgb(129,96,217); !important;
+    background: #6d7fcc !important;
     color: #fff !important;
 }
 
@@ -147,9 +146,59 @@ a.article:hover {
 #content {
     position:relative;
     width:100%;
-
     min-height: 100vh;
     transition: all 0.3s;
+}
+header{
+    background-color: #7386D5;
+    padding-left: 35px;
+    height: 80px;
+    font-size: 45px;
+    font-family: sans-serif;
+    width:100%;
+}
+#dropbtn{
+    background-color: transparent;
+    float:right;
+    margin-right: 10px;
+    border: none;
+}
+
+.dropdownbtn {
+    float:right;
+    height: 180px;
+}
+
+.dropdownbtn-content {
+    display: none;
+    position: absolute;
+    background: #7386D5;
+    color: #fff;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    right: 0px;
+    top: 80px;
+}
+
+.dropdownbtn-content a {
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    font-size: 20px;
+}
+
+.dropdownbtn-content a:hover {
+    color: #7386D5;
+    background: #fff;
+}
+
+.dropdownbtn:hover .dropdownbtn-content {
+    display: block;
+}
+
+.dropdownbtn:hover #dropbtn {
+    color: #7386D5;
 }
 
 
