--- a/chat-app/static/css/mcq.css
+++ b/chat-app/static/css/mcq.css
@@ -131,6 +131,17 @@
     background-color: #bdc9d3;
     outline: none;
 }
+.answerDiv{
+    width: 90%;
+    padding: 15px;
+    margin: 16px 0 16px 20px;
+    border: none;
+    background: #95b3ce;
+    border-radius: 5px;
+    resize: none;
+    background-color: #bdc9d3;
+    outline: none;
+}
 .form-container ::placeholder{
     color:#174368;
     opacity: 0.8;
