--- a/chat-app/templates/hubbase.html
+++ b/chat-app/templates/hubbase.html
@@ -60,29 +60,33 @@
                 <li>
                     <a href="/sketchpad">Sketchpad</a>
                 </li>
-                <li>
-                    <a href="/MCQ">MCQ</a>
-                </li>
 
 
             
             </ul>
         </nav>
         <div id="content">
-
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <header> 
+                <div class="dropdownbtn">
+                <button id="dropbtn"><i class='fas fa-user-circle' style='font-size:48px;color: white;'></i></button>
+                <div class="dropdownbtn-content">
+                    <a href="#">Profile</a>
+                    <a href="#">Settings</a>
+                    <a href="#">Sign Out</a>
+                </div>
+                </div>
+            </header>
+            <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
-
                     <button type="button" id="sidebarCollapse" class="btn btn-info">
                         <i class="fas fa-align-left"></i>
                     </button>
                     <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="fas fa-align-justify"></i>
                     </button>
-
                   
                 </div>
-            </nav>
+            </nav> -->
 
             {% block content %}
             {% endblock %}
@@ -99,7 +103,7 @@
     </script>
 
 
-{% block body1 %}
+{% block body %}
 {% endblock %}
 </body>
 
