--- a/chat-app/templates/hubbase.html
+++ b/chat-app/templates/hubbase.html
@@ -60,6 +60,9 @@
                 <li>
                     <a href="/sketchpad">Sketchpad</a>
                 </li>
+                <li>
+                    <a href="/MCQ">MCQ</a>
+                </li>
 
 
             
