--- a/chat-app/templates/MCQ.html
+++ b/chat-app/templates/MCQ.html
@@ -27,7 +27,8 @@
                     <input type="text" id="answer3" placeholder="Option 4" name="question" required>
                 </div>
                 <button type="submit" id="post" class="btn">Post</button>
-                <button type="submit" id="add-option" class="btn" onclick="add()">Add Answer</button>
+                <button type="submit" id="add-option" class="btn" onclick="add()">+</button>
+                <button type="submit" id="delete-option" class="btn" onclick="del()">-</button>
                 <!-- <a href=""><i class="fa-solid fa-pen"></i>whiteboard</a> -->
                 
             </form>
@@ -49,6 +50,7 @@ let pollDOM = {
     question:document.querySelector(".poll .question"),
     answers:document.querySelector(".poll .answers")
 };
+
 document.getElementById("message_input_form").onsubmit = function(e){
     e.preventDefault();
     const quest = document.getElementById("question_input");
@@ -79,18 +81,29 @@ function add(){
     var answerDiv = document.getElementById("answerDiv");
     var len = answerDiv.getElementsByTagName("input").length;
     var newEntry = document.createElement("input");
-    id = "answer" + (len-1);
+    id = "answer" + len;
     placeholder = "Option " + (len +1);
     newEntry.setAttribute("id", id);
     newEntry.setAttribute("placeholder", placeholder);
     newEntry.classList.add("answerDiv");
     if (len < 6){
+        poll.answersWeight.push(0)
         return(answerDiv.append(newEntry));
     }
     else{
         return alert("no more than 6 possible answers");
     }
-    poll.pollCount.push(0);
+}
+function del(){
+    var answers = document.getElementById("answerDiv").getElementsByTagName("input");
+    var len = answers.length
+    if (len > 1){
+        answers[len-1].remove();
+        return poll.answersWeight.pop()
+    }
+    else{
+        return alert("One option required");
+    }
 }
 
 function markAnswer(i){
