--- a/chat-app/static/css/canvas.css
+++ b/chat-app/static/css/canvas.css
@@ -1,4 +1,9 @@
 
+
+#header
+{
+  z-index:2;
+}
 #content{
   /* padding-left:0px; */
   padding-top:0px;
@@ -8,14 +13,14 @@
   position:absolute;
   top:0;
   left:0;
-  z-index: 1
+  z-index: 1;
 }
 #can
 {
   position:absolute;
   top:0;
   left:0;
-  z-index:0;
+  z-index:1;
   cursor:none;
 }
 
@@ -40,10 +45,9 @@
 #toolkit
 {
   width: 100%;
-  height:60px;
-  background-color: #ff0000;
-  border-radius: 0px;
-  box-shadow: 0px 3px 5px rgb(90,90,90);
+  background-color: transparent;
+  /* border-radius: 0px; */
+  /* box-shadow: 0px 3px 5px rgb(90,90,90); */
   z-index: 2;
 }
 
