--- a/chat-app/static/css/hubbase.css
+++ b/chat-app/static/css/hubbase.css
@@ -3,213 +3,93 @@
 */
 
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
-body {
+*{
     font-family: 'Poppins', sans-serif;
-    background: #fafafa;
 }
 
-p {
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.1em;
-    font-weight: 300;
-    line-height: 1.7em;
-    color: #999;
-}
 
-a,
-a:hover,
-a:focus {
-    color: inherit;
-    text-decoration: none;
-    transition: all 0.3s;
-}
 
-.navbar {
-    padding: 15px 10px;
-    background: #fff;
-    border: none;
-    border-radius: 0;
-    margin-bottom: 40px;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-}
-
-.navbar-btn {
-    box-shadow: none;
-    outline: none !important;
-    border: none;
-}
-
-.line {
-    width: 100%;
-    height: 1px;
-    border-bottom: 1px dashed #ddd;
-    margin: 40px 0;
-}
-
-/* ---------------------------------------------------
-    SIDEBAR STYLE
------------------------------------------------------ */
-
-.wrapper {
+body{
     display: flex;
-    width: 100%;
-    align-items: stretch;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height:100%;
+}
+html{
+    height:100%;
 }
 
-#sidebar {
-    min-width: 250px;
-    max-width: 250px;
-    background: #7386D5;
-    color: #fff;
-    transition: all 0.3s;
-}
-
-#sidebar.active {
-    margin-left: -250px;
-}
-
-#sidebar .sidebar-header {
-    padding: 20px;
-    background: #6d7fcc;
-}
-
-#sidebar ul.components {
-    padding: 20px 0;
-    border-bottom: 1px solid #47748b;
-}
-
-#sidebar ul p {
-    color: #fff;
-    padding: 10px;
-}
-
-#sidebar ul li a {
-    padding: 10px;
-    font-size: 1.1em;
-    display: block;
-}
-
-#sidebar ul li a:hover {
-    color: #7386D5;
-    background: #fff;
-}
-
-#sidebar ul li.active>a,
-a[aria-expanded="true"] {
-    color: #fff;
-    background: #6d7fcc;
-}
-
-a[data-toggle="collapse"] {
-    position: relative;
-}
-
-.dropdown-toggle::after {
-    display: block;
-    position: absolute;
-    top: 50%;
-    right: 20px;
-    transform: translateY(-50%);
-}
-
-ul ul a {
-    font-size: 0.9em !important;
-    padding-left: 30px !important;
-    background: #6d7fcc;
-}
-
-ul.CTAs {
-    padding: 20px;
-}
-
-ul.CTAs a {
-    text-align: center;
-    font-size: 0.9em !important;
-    display: block;
-    border-radius: 5px;
-    margin-bottom: 5px;
-}
-
-a.download {
-    background: #fff;
-    color: #7386D5;
-}
-
-a.article,
-a.article:hover {
-    background: #6d7fcc !important;
-    color: #fff !important;
-}
-
-
-
-#content {
-    position:relative;
+#topbar
+{
     width:100%;
-    min-height: 100vh;
-    transition: all 0.3s;
+    padding:0;
+    margin:0;
 }
-header{
-    background-color: #7386D5;
-    padding-left: 35px;
-    height: 80px;
-    font-size: 45px;
-    font-family: sans-serif;
+
+
+
+#namestrip
+{
     width:100%;
-}
-#dropbtn{
-    background-color: transparent;
-    float:right;
-    margin-right: 10px;
-    border: none;
-}
-
-.dropdownbtn {
-    float:right;
-    height: 180px;
+    background-color: rgb(129,96,217);
+    font-family: 'Poppins', sans-serif;
+    color:white;
+    font-size:35px;
+    padding-left:1%;
+    margin:0;
+    padding:10px;
+    font-family: 'Poppins', sans-serif;
 }
 
-.dropdownbtn-content {
-    display: none;
-    position: absolute;
-    background: #7386D5;
-    color: #fff;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-    right: 0px;
-    top: 80px;
-}
-
-.dropdownbtn-content a {
-    padding: 12px 16px;
+#navbar
+{
+    width:100%;
+    background-color: rgb(95, 68, 168);
+    font-family: 'Poppins', sans-serif;
+    color:white;
+    font-size:15px;
+    padding-left:0;
     text-decoration: none;
-    display: block;
-    font-size: 20px;
+    cursor:pointer;
+    margin:0;
+    display:flex;
+    flex-direction: row;
+    list-style-type:none;
+
+
+}
+#navbar li a{
+    margin-left:10px;
+    background-color: rgb(95, 68, 168);
+    color: #ffffff;
+    text-decoration: none;
+
+    
+}
+#navbar li a:hover{
+    transition: color 0.1s linear;
+    -webkit-transition: color 0.1s linear;
+    -moz-transition: color 0.1s linear;
+    color:rgb(206, 206, 206);   
 }
 
-.dropdownbtn-content a:hover {
-    color: #7386D5;
-    background: #fff;
+
+#content{
+    width:100%;
+    height:100%;
+    background-color: rgb(207, 207, 207);
 }
 
-.dropdownbtn:hover .dropdownbtn-content {
-    display: block;
-}
-
-.dropdownbtn:hover #dropbtn {
-    color: #7386D5;
-}
-
-
-@media (max-width: 768px) {
-    #sidebar {
-        margin-left: -250px;
+button{
+    margin-top: 50px;
+    width: 100%;
+    background-color: #ffffff;
+    color: #080710;
+    padding: 15px 0;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 5px;
+    cursor: pointer;
     }
-    #sidebar.active {
-        margin-left: 0;
-    }
-    #sidebarCollapse span {
-        display: none;
-    }
-}
+    
