--- a/static/css/session.css
+++ b/static/css/session.css
@@ -55,5 +55,18 @@
     list-style-type:none;
     text-align: center;
     padding: 50px 35px;
+
+
+
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
 }
 
+#createsession
+{
+    visibility:hidden;
+    opacity: 0;
+}
