--- a/chat-app/templates/joinsession.html
+++ b/chat-app/templates/joinsession.html
@@ -9,7 +9,7 @@
         <h3>Join an existing session</h3>
         <label>Enter session ID:</label>
         <input type="text" placeholder="Session ID" onfocus="this.placeholder = ''"onblur="this.placeholder = 1234" name="room" maxlength="10">
-        <button type="submit">Submit</button>
+        <button class="submitbtn" type="submit">Submit</button>
     </form>
 </div>
 {% endblock %}
