--- a/chat-app/templates/newsession.html
+++ b/chat-app/templates/newsession.html
@@ -27,7 +27,7 @@
         </script>
         <strong><a id="generateID" onclick = "GenerateSessionID()" style="cursor:pointer; font-size:15px;">Generate one for me</a></strong>
         
-        <button type="submit">Submit</button>
+        <button class="submitbtn" type="submit">Submit</button>
     </form>
 </div>
 {% endblock %}
