--- a/chat-app/templates/MCQ.html
+++ b/chat-app/templates/MCQ.html
@@ -16,7 +16,7 @@
      <!-- The Modal -->
      <div id="myModal" class="modal">
      <!-- Modal content -->
-        <div class="modal-content">
+        <div class="model-content">
             <span class="close">&times;</span>
             <form name="modal-form" id="message_input_form" class="form-container">
                 <input type="text" id="question_input" placeholder="Enter your question" name="question" required>
