--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -1,3 +1,17 @@
+#chatbar
+{
+    position:absolute;
+    transform: translate(-50%,-50%);
+    top:100%;
+    left:50%;
+
+}
+
+
+
+
+
+
 *{
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -61,25 +75,7 @@ header{
     font-family: sans-serif;
 }
 
-header button{
-    float: right;
-    height: 30px;
-    font-size: 16px;
-    margin-top: 16px;
-    margin-right: 16px;
-    border-radius: 8px;
-    align-items: center;
-    cursor: pointer;
-    color: white;
-    background-color: #4884b6;
-    width: 70px;
-    border-style: none;
-    box-shadow: rgba(255, 255, 255, 0.26) 0 1px 2px inset;
-    box-sizing: border-box;
-    font-family: sans-serif;
-    padding-top: 4px;
-    font-weight: normal;
-}
+
 
     /* The Modal (background) */
 .modal {
