--- a/static/css/hubbase.css
+++ b/static/css/hubbase.css
@@ -9,22 +9,18 @@
 
 
 
-body{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    height:100%;
-}
-html{
-    height:100%;
-}
+
+
 
 #topbar
 {
     width:100%;
     padding:0;
     margin:0;
+    position: absolute;
+    top:0;
+    left:0;
+
 }
 
 
@@ -40,6 +36,8 @@ html{
     margin:0;
     padding:10px;
     font-family: 'Poppins', sans-serif;
+
+    
 }
 
 #navbar
@@ -56,8 +54,6 @@ html{
     display:flex;
     flex-direction: row;
     list-style-type:none;
-
-
 }
 #navbar li a{
     margin-left:10px;
@@ -76,9 +72,9 @@ html{
 
 
 #content{
-    width:100%;
-    height:100%;
     background-color: rgb(207, 207, 207);
+    width:100%;
+
 }
 
 button{
