--- a/chat-app/static/css/chat.css
+++ b/chat-app/static/css/chat.css
@@ -1,6 +1,14 @@
 
+#messages{
+    overflow-y:auto;
+}
 #session-id
 {
+    width:100%;
+    height:30px;
+    text-align: left;
+    padding:0;
+    margin:0;
 
 }
 #media-wrapper
@@ -11,16 +19,19 @@
 }
 #canvas-wrapper
 {
-    background-color: #000;
+    background-color: rgb(206, 206, 206);
     width:49%;
     height:100%;
 
 }
 #chat-wrapper
 {
-    background-color: rgb(255, 0, 0);
+    position:relative;
+
+    background-color: rgb(206, 206, 206);
     width:49%;
     height:100%;
+    
 
 }
 #divider
@@ -34,9 +45,9 @@
 #texttoolbar
 {
     height:50px;
-    position:relative;
-    transform: translate(-50%,0%);
-    top:calc(95% - 40px);
+    position:absolute;
+    bottom:50px;
+    transform: translate(-50%, 0);
     left:50%;
     width:50%;
 }
